--- a/app/views/decklists/index.html.erb
+++ b/app/views/decklists/index.html.erb
@@ -1,9 +1,20 @@
 <h1><%=@current_user.email%>'s DECKLISTS</h1>
+
+
 <%@decklists.each do |decklist|%>
     <%if decklist.user_id == @current_user.id%>
 <!--if decklist.user_id == @current_user.id-->
+        <div class="card" style="width: 18rem;">
         <%= image_tag decklist.cover, :class => 'cover-art' if decklist.cover.present? %>
-        <li>name: <%=link_to decklist.name, decklist%></li>
+        <div class="card-body">
+            <h5 class="card-title"><%=decklist.name%></h5>
+            <p class="card-text"><%=decklist.description%></p>
+            <%=link_to "Go To Deck", decklist, :class =>"btn btn-primary" %>
+        </div>
+</div>
     <%end%>
         <!--someway to show the number of cards-->
 <% end %>
+
+
+
