--- a/app/assets/stylesheets/decklists.scss
+++ b/app/assets/stylesheets/decklists.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the Decklists controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.card{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 1em;
+}
+.cover-art{
+    border-radius: 1em 1em 0 0;
+}
