--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,8 +1,12 @@
 <h1><%=@current_user.email%>'s Card Library</h1>
+<div class="container">
+        <%@current_user.cards.uniq.each do |card|%>
+        <!--if card is in users decklists and belongs to the user? show all the cards-->
+        <div class="item">
+                <h6>name: <%=link_to card.title, card%></h6>
+                <%= link_to image_tag(card.image, :class => 'index-thumbnail'), card %>
+        </div>
+        <% end %>
+</div>
 
-<%@current_user.cards.each do |card|%>
-<!--if card is in users decklists and belongs to the user? show all the cards-->
-        <h2>name: <%=link_to card.title, card%></h2>
-        <%= image_tag card.image, :class => 'cover-art' if card.image.present? %>
-<% end %>
 
