--- a/app/views/decklists/new.html.erb
+++ b/app/views/decklists/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Decklists#new</h1>
-<p>Find me in app/views/decklists/new.html.erb</p>
+<h1>New Decklist</h1>
+
+<%= render :partial => 'form' %>
