--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -4,7 +4,7 @@
             <div class="img-square-wrapper">
                 <%= image_tag @card.image, :class =>'card-img' %>
             </div>
-            <div class="card-body">
+            <div class="card-body card-show">
                 <h5 class="card-title"><%=@card.title%></h5>
                 <h5 class="card-title">Price: $<%=@card.price%> USD</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Release Date: <%=@card.release%></h6>
