--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,6 +19,6 @@
         <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: 'Password' %>
 
 
-        <%= f.submit "Sign Up!", class:'btn btn-lg btn-primary btn-block'%>
+        <%= f.submit "Sign Up!", class:'entry-btn btn btn-lg btn-primary btn-block'%>
     <%end%>
 </div>
