--- a/app/assets/stylesheets/decklists.scss
+++ b/app/assets/stylesheets/decklists.scss
@@ -5,3 +5,22 @@
 .cover-art{
     border-radius: 1em 1em 0 0;
 }
+.controls{
+    margin: 0 auto;
+    margin-top: 10%;
+    text-align: center;
+    max-width: 200px;
+}
+.deck-column{
+    margin-bottom: 20px;
+}
+.checkbox_container input {
+    display: inline;
+  }
+.form-inputs{
+    margin-bottom: 3%;
+}
+
+.checkboxes label {
+    display:block;
+  }
