--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -28,7 +28,7 @@
                 <div class="card border-white">
                     <div class="card-header">How To Search By Name</div>
                         <div class="card-body">
-                            <p class="card-text">Search card by name case insensitive, either exact or approximate spelling accepted.</p>
+                            <p class="card-text">Search by name case insensitive, exact or approximate spelling accepted.</p>
                             <footer class="blockquote-footer">Example: Search 'ponder' for the card "Ponder"</footer>
                         </div>
                     </div>
