--- a/app/views/cards/results.html.erb
+++ b/app/views/cards/results.html.erb
@@ -3,35 +3,40 @@
 <%if @info["object"] == "error" || @info["code"] == "not_found"%>
     <h1>NO CARDS FOUND</h1>
 <%else%>
-    <div class="search-container">
+    <div class="card-deck">
         <%@info["data"].each do|card|%>
 
-        <div class="result-card">
-                <ul>
-                    <%thumbnail = card.dig"image_uris", "small"%>
-                    <li><%= card["name"]%></li>
-                    <li><img class="feature" src="<%=thumbnail%>"></li>
-                    <li>$<%= card.dig"prices","usd" %></li>
-                    <li>Set Name:<%= card["set_name"]%></li>
-                    <li>Information:<%= card["oracle_text"]%></li>
-                </ul>
-
-        
-                <%=form_for Card.new do |f|%>
-                    <%=f.select "decklist_ids", @decklists.map{|d|[d.name, d.id]}%>
-                    <%=f.hidden_field :title, :value=>card["name"] %>
-                    <%image = card.dig"image_uris", "normal"%>
-                    <%=f.hidden_field :image, :value=>image %>
-                    <%price = card.dig"prices","usd"%>
-                    <%=f.hidden_field :price, :value=>price %>
-                    <%=f.hidden_field :release,:value=>card["released_at"]%>
-                    <%=f.hidden_field :rarity, :value=>card["rarity"]%>
-                    <%=f.hidden_field :oracle, :value=>card["oracle_text"]%>
-                    <%=f.hidden_field :oracle, :value=>card["oracle_text"]%>
-                    <%=f.hidden_field :user_id, :value=>@current_user.id%>
-                    <!--i need to give it to a user-->
-                    <%=f.submit "Add Card to Decklist" %>
-                <%end%>
+            <div class="card">
+                <%thumbnail = card.dig"image_uris", "normal"%>
+                <img class="card-img-top" src="<%=thumbnail%>"></li>
+                <div class="card-body">
+                    <p>
+                        <ul>
+                            <h5 class="card-title"><%= card["name"]%></h5>
+                            <h5 class="card-title"><%= card["type_line"]%></h5>
+                            <li>$<%= card.dig"prices","usd" %></li>
+                           <p>Information:<%= card["oracle_text"]%></p>
+                        </ul>
+                    </p>
+                </div>
+   
+                <footer class=result-select>
+                    <%=form_for Card.new do |f|%>
+                        <%=f.select "decklist_ids", @decklists.map{|d|[d.name, d.id]}%>
+                        <%=f.hidden_field :title, :value=>card["name"] %>
+                        <%image = card.dig"image_uris", "normal"%>
+                        <%=f.hidden_field :image, :value=>image %>
+                        <%price = card.dig"prices","usd"%>
+                        <%=f.hidden_field :price, :value=>price %>
+                        <%=f.hidden_field :release,:value=>card["released_at"]%>
+                        <%=f.hidden_field :rarity, :value=>card["rarity"]%>
+                        <%=f.hidden_field :oracle, :value=>card["oracle_text"]%>
+                        <%=f.hidden_field :card_type, :value=>card["type_line"]%>
+                        <%=f.hidden_field :user_id, :value=>@current_user.id%>
+                        <!--i need to give it to a user-->
+                        <%=f.submit "Add Card to Decklist" %>
+                    <%end%>
+                </footer>
             </div>
         <%end%>
     </div>
