--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,36 @@
 <h1>MTG</h1>
 
-    <%if @current_user.present? %>
-    <h2>Welcome Back<%=@current_user.email%>!</h2><!-- if someone is logged in before use initiate the action, we welcome them back, otherwise skip the line-->
-    <%end%>
+<%if @current_user.present? %>
+<h2>Welcome Back<%=@current_user.email%>!</h2><!-- if someone is logged in before use initiate the action, we welcome them back, otherwise skip the line-->
+<%end%>
+
+<%@posts.reverse_each do |post|%>
+
+    <div class="individual-post-container">
+        <h2>
+            <%=post.title%>
+        </h2>
+
+        <% if post.post_text.present? %>
+            <h5> <%= post.post_text %> </h5>
+        <% end %>
+        <% if post.image.present? %>
+            <%=image_tag post.image, :class=> 'post-image'%>  
+        <%end%>
+        <% if post.video.present? %>
+        <div>
+            <%=raw YouTubeAddy.youtube_embed_url(post.video,560,315) %>
+        </div> 
+        <% end %>
+
+        <div class="posted-by-container">
+            <%user=User.find post.user_id%>
+                <h4>Posted by <%=user.email%></h4>
+                <h4> 
+                    <% time = (post.created_at).strftime("%d %B %Y at %I:%M%P")%> 
+                    <%= time %>
+                </h4>
+        </div>
+    </div>
+    
+<%end%>
