--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,12 +7,16 @@
     align-items: center;
 }
 
-.create-post-form{
+
+.form-post{
     max-width: 500px;
     margin: 0 auto;
     background-color: #fff;
     padding: 15px 40px 50px;
     border: 1px solid #e5e5e5;
     border-radius: 10px;
+}
 
+.post-wrapper{
+    padding-bottom: 3%;
 }
