--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,37 +1,53 @@
-<h1>MTG</h1>
+<%if flash[:message]%>
+    <div class="alert alert-success" role="alert">
+        <h5><%=flash[:message]%></h5>
+    </div>
+<%elsif flash[:welcome]%>
+    <div class="alert alert-success" role="alert">
+        <h5><%=flash[:welcome]%></h5>
+    </div>
+<%end%>
+
+<h1>Community</h1>
+
+
 
 <%if @current_user.present? %>
-    <h2>Welcome Back<%=@current_user.email%>!</h2><!-- if someone is logged in before use initiate the action, we welcome them back, otherwise skip the line-->
-
-
-    <%@posts.reverse_each do |post|%>
-        <div class="individual-post-container">
-
-            <h2>
-                <%=post.title%>
-            </h2>
-
-
-            <% if post.post_text.present? %>
-                <h5> <%= post.post_text %> </h5>
-            <% end %>
-            <% if post.image.present? %>
-                <%=image_tag post.image, :class=> 'post-image'%>  
-            <%end%>
-            <% if post.video.present? %>
-                <div>
-                    <%video=YouTubeAddy.extract_video_id(post.video)%>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/<%=video%>" allowfullscreen></iframe>
-                </div> 
-            <% end %>
-            <div class="posted-by-container">
-                <%user=User.find post.user_id%>
-                <h4>Posted by <%=user.email%></h4>
-                <h4> 
-                    <% time = (post.created_at).strftime("%d %B %Y at %I:%M%P")%> 
-                    <%= time %>
-                </h4>
-            </div>  
-        </div>
-    <%end%>
+        <%=link_to "New Post", new_post_path, class:"btn btn-outline-info new-post"%>
 <%end%>
+    <div class="container">
+        <%@posts.reverse_each do |post|%>
+            <div class="individual-post-container container">
+
+                <h2>
+                    <%=post.title%>
+                </h2>
+
+                <% if post.image.present? %>
+                <div class="post-image">
+                    <%=cl_image_tag post.image%> 
+                </div> 
+                <% elsif post.video.present? %>
+                    <div class="container">
+                        <%video=YouTubeAddy.extract_video_id(post.video)%>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/<%=video%>" allowfullscreen class="video"></iframe>
+                    </div> 
+                <% end %>
+                <% if post.post_text.present? %>
+                    <p> <%= post.post_text %> </p>
+                <% end %>
+                <div class="posted-by-container">
+                    <%user=User.find post.user_id%>
+                    <h5>Posted by <%=user.email%></h5>
+                    <h6 class='time'> 
+                        <% time = (post.created_at).strftime("%d %B %Y at %I:%M%P")%> 
+                        <%= time %>
+                    </h6>
+                </div>  
+            </div>
+        <%end%>
+    </div> 
+
+
+
+
