--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,8 +1,10 @@
 *{
     box-sizing: border-box;
 }
+
 h1{
-    margin-top:5%;
+    color:#f5f5f5;
+    margin-top:3%;
     margin-bottom: 2%;
    text-align: center;
 }
@@ -41,25 +43,32 @@ h1{
 }
 .cards-container{
     display:grid;
-    grid-gap:50px 0px;
-    grid-template-columns: 25% 25% 25%;
+    grid-gap:48px;
+    grid-template-columns: repeat(auto-fit,minmax(250px, 20%));
     justify-items: center;
     justify-content: center;
-    margin-bottom: 5%;
+    margin:2% 5% 2% 5%;
+
+}
+.cards-container a{
+    text-decoration: none;
+    color:#85C0FF;
 }
 .search-input{
     margin:10px;
 }
 
 .index-thumbnail{
-    max-height: 300px;
+    max-width: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 1em;
+    margin-bottom: 10px;
+}
+.item{
+    text-align: center;
+
 }
 
-.search-parameters{
-    border: 1px solid blue;
-}
 .btn-div{
     display: flex;
     align-items: center;
@@ -86,14 +95,15 @@ h1{
 }
 
 .card-deck{
-    max-width: 1200px;
-    margin: 0 auto;
-    // border: 1px solid green;
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap:20px;
-    margin-bottom: 2%;
+    grid-gap:48px;
+    grid-template-columns: repeat(auto-fit,minmax(250px, 20%));
+    justify-items: center;
+    justify-content: center;
+    margin:2% 5% 2% 5%;
+    padding-bottom: 2%;
 }
+
 .card-body{
     font-size: 15px;
 }
@@ -105,4 +115,25 @@ h1{
     margin: 0 auto;
     text-align: center;
     margin-bottom: 20px;
+}
+.search-image{
+    max-width: 100%;
+}
+.search-result{
+    max-width: 100%;
+}
+.deck-select{
+    margin-bottom: 15px;
+}
+.card-price {
+    padding:5px 0px 5px 0px;
+}
+.card-release{
+    padding:5px 0px 5px 0px;  
+}
+.card-rarity{
+    padding:5px 0px 5px 0px;  
+}
+.decks-present{
+    margin:5px 0px 5px 0px; 
 }
