--- a/app/assets/stylesheets/decklists.scss
+++ b/app/assets/stylesheets/decklists.scss
@@ -7,9 +7,9 @@
 }
 .controls{
     margin: 0 auto;
-    margin-top: 10%;
     text-align: center;
     max-width: 200px;
+    padding-bottom: 2%;
 }
 .deck-column{
     margin-bottom: 20px;
@@ -24,3 +24,45 @@
 .checkboxes label {
     display:block;
   }
+
+.deck-index{
+    margin-bottom: 3%;
+}
+.deck{
+    color:#f5f5f5;
+    
+}
+.deck-links a{
+    text-decoration: none;
+    color:#85C0FF
+}
+.decklist-description-show{
+    color:#f5f5f5;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.controls{
+    display:flex;
+    justify-content: center;
+}
+.deck-button{
+    margin: 10px;
+    min-width: 120px;
+}
+.deck-name{
+    color:#f5f5f5;
+}
+.deck-cover{
+    color:#f5f5f5;
+}
+.deck-description{
+    color:#f5f5f5;
+}
+.edit-deck-container{
+    color:#f5f5f5;
+}
+.create-deck{
+    margin:0 auto;
+    margin-top: 2%;
+}
