--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,34 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.individual-post-container img {
+    max-height: 400px;
+    width:auto;
+    padding: 20px 100px;
+}
+
+.video{
+    max-width: 500px;
+    min-height: 300px;
+}
+.individual-post-container {
+    max-width: 800px;
+    background: rgba(255,255,255,0.5);
+    margin: 48px auto;
+    text-align: center;
+    border-radius:1em;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding-bottom: 24px;
+    padding-top: 24px;
+}
+h1{
+    text-align: center;
+}
+.new-post{
+    max-width: 500px;
+    margin: 0 auto;
+}
+.alert{
+    text-align: center;
+}
+.time{
+    color: #858585;
+}
