--- a/app/views/cards/results.html.erb
+++ b/app/views/cards/results.html.erb
@@ -1,4 +1,4 @@
-<h1>Search results</h1>
+<h1>Search results for "<%=@searchparams%> : <%=@searchtext%>"</h1>
 
 <%if @info["object"] == "error" || @info["code"] == "not_found"%>
     <h1>NO CARDS FOUND</h1>
@@ -6,27 +6,28 @@
     <div class="card-deck">
         <%@info["data"].each do|card|%>
 
-            <div class="card">
+            <div class="card search-result">
                 <%thumbnail = card.dig"image_uris", "normal"%>
-                <img class="card-img-top" src="<%=thumbnail%>"></li>
-                <div class="card-body">
-                    <p>
-                        <ul>
-                            <h5 class="card-title"><%= card["name"]%></h5>
-                            <h5 class="card-title"><%= card["type_line"]%></h5>
-                            <li>$<%= card.dig"prices","usd" %></li>
-                           <p>Information:<%= card["oracle_text"]%></p>
-                        </ul>
-                    </p>
+                <img class="card-img-top search-image" src="<%=thumbnail%>"></li>
+                <div class="card-body comment-body">
+
+                        <h4 class="card-title"><%= card["name"]%></h5>
+                        <h5 class="card-title"><%= card["type_line"]%></h6>
+                        <%price = ""%>
+                        <%price = card["prices"]["usd"]%>
+                        <%if price == nil%>
+                            <%price = card["prices"]["usd_foil"]%>
+                        <%end%>
+                        <h5>$<%=price%></h6>
+
                 </div>
    
                 <footer class=result-select>
                     <%=form_for Card.new do |f|%>
-                        <%=f.select "decklist_ids", @decklists.map{|d|[d.name, d.id]}%>
+                        <%=f.select "decklist_ids", @decklists.map{|d|[d.name, d.id]},{},:class=>"form-select deck-select"%>
                         <%=f.hidden_field :title, :value=>card["name"] %>
                         <%image = card.dig"image_uris", "normal"%>
                         <%=f.hidden_field :image, :value=>image %>
-                        <%price = card.dig"prices","usd"%>
                         <%=f.hidden_field :price, :value=>price %>
                         <%=f.hidden_field :release,:value=>card["released_at"]%>
                         <%=f.hidden_field :rarity, :value=>card["rarity"]%>
@@ -34,7 +35,7 @@
                         <%=f.hidden_field :card_type, :value=>card["type_line"]%>
                         <%=f.hidden_field :user_id, :value=>@current_user.id%>
                         <!--i need to give it to a user-->
-                        <%=f.submit "Add Card to Decklist" %>
+                        <%=f.submit "Add Card to Decklist" , :class=>"btn btn-outline-success add-button"%>
                     <%end%>
                 </footer>
             </div>
