--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Project1</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= cloudinary_js_config %>
@@ -22,25 +22,21 @@
               <li class="navitem"><%=link_to "All Users", users_path, class:"nav-link"%></li>
             <%end%>
                    
-          <li class="navitem"><%=link_to "Cards", cards_path, class:"nav-link"%></li>
-          <li class="navitem"><%=link_to "New Card", new_card_path, class:"nav-link"%></li>
-          <li class="navitem"><%=link_to "New Post", new_post_path, class:"nav-link"%></li>
-          <li class="navitem"><%=link_to "Decklists", decklists_path, class:"nav-link"%></li>
-          <li class="navitem"><%=link_to "New Decklist", new_decklist_path, class:"nav-link"%></li>
-          <li class="navitem"><%=link_to "sign out-#{@current_user.email}", login_path, :method=>'delete', class:"nav-link"%></li>
+          <li class="navitem"><%=link_to "My Cards", cards_path, class:"nav-link"%></li>
+          <li class="navitem"><%=link_to "Add Cards", new_card_path, class:"nav-link"%></li>
+          <li class="navitem"><%=link_to "My Decks", decklists_path, class:"nav-link"%></li>
+          <li class="navitem"><%=link_to "Add Deck", new_decklist_path, class:"nav-link"%></li>
+          <li class="navitem"><%=link_to "Log Out-#{@current_user.email}", login_path, :method=>'delete', class:"nav-link"%></li>
         <%else%>
           <li class="navitem"><%=link_to "Sign-Up", new_user_path, class:"nav-link"%></li>
-          <li class="navitem"><%=link_to "Sign-In", login_path, class:"nav-link"%></li>
+          <li class="navitem"><%=link_to "Log In", login_path, class:"nav-link"%></li>
         <%end%>
         </ul>
       </div>
       </div>
     </nav>
-    <nav>
-    
 
-    </nav>
-    <%= yield %>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <%= yield %>
+   
   </body>
 </html>
