--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New Post</h1>
 
-<div class="wrapper">
-    <%= form_for @post, :html => {:class => "form-signin"} do |f| %>
+
+<div class="wrapper post-wrapper">
+    <%= form_for @post, :html => {:class => "form-post", :multipart=>true} do |f| %>
         <h2 class="form-signin-heading text-center">New Post</h2>
         <%= f.label :title, 'Title', class: 'sr-only' %>
         <%= f.text_field :title, autofocus: true, class: 'form-control'%>
@@ -13,7 +13,7 @@
         <%= f.label :image, "Upload Image",  class: 'sr-only' %>
         <%=f.cl_image_upload :image, :class=>"form-control", :type=>"file"%>
 
-        <%= f.label :video, 'Video Url', class: 'sr-only' %>
+        <%= f.label :video, 'Video Youtube Url', class: 'sr-only' %>
         <%= f.url_field :video, class: 'form-control' %>
 
         <%= f.submit "Post!", class:'entry-btn btn btn-lg btn-primary btn-block'%>
